# Plugin-Plasma-Toolbar

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  qv2ray_plugin_plasmatoolbar.cpp  qv2ray_plugin_plasmatoolbar.h
src/package/: metadata.desktop
src/package/contents/ui/: QvBarLine.qml  QvBarPage.qml  main.qml
